--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "create-react-app": "^5.0.0",
+    "cryptocompare": "^1.0.0",
     "styled-components": "^4.0.2"
   }
 }
