--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "create-react-app": "^1.2.1",
     "cryptocompare": "^1.0.0",
+    "lodash": "^4.17.21",
     "styled-components": "^4.0.2"
   }
 }
