--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "create-react-app": "^1.2.1",
     "cryptocompare": "^1.0.0",
     "lodash": "^4.17.21",
+    "react-highcharts": "^16.1.0",
     "styled-components": "^4.0.2"
   }
 }
